tweaking sort function

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             
                 <h2 class="results__title">Search Results for ""</h2>
             <div class="results__options">
-                <select class="results__sort" onchange="onSortChange(event)">
+                <select class="results__sort" onselect="onSortChange(event)">
                     <option value="default">Sort By</option>
                     <option value="title-asc">Title (A-Z)</option>
                     <option value="title-desc">Title (Z-A)</option>
